feat: Add Adaptive Cards support in notifications

--- a/meteor/package.json
+++ b/meteor/package.json
@@ -44,6 +44,7 @@
     "@fortawesome/react-fontawesome": "0.0.19",
     "@nrk/core-icons": "^3.2.0",
     "@slack/client": "^4.6.0",
+    "adaptivecards": "^1.2.5",
     "amqplib": "^0.5.3",
     "body-parser": "^1.18.3",
     "caller-module": "^1.0.1",
@@ -57,6 +58,7 @@
     "i18next-xhr-backend": "^1.5.1",
     "indexof": "0.0.1",
     "lottie-web": "^5.1.10",
+    "markdown-it": "^10.0.0",
     "meteor-node-stubs": "^0.3.3",
     "moment": "^2.19.1",
     "mos-connection": "^0.7.0",
